--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ h6 {
     padding-bottom: 50px;
     text-align: center;
     color: #f8f8f8;
-    background: url(../img/img.jpg) no-repeat center center;
+    background: url(../img/IMG.jpg) no-repeat center center;
     background-size: cover;
 }
 
@@ -174,7 +174,7 @@ p.copyright {
     padding-bottom: 50px;
     text-align: center;
     color: #f8f8f8;
-    background: url(../img/mapa.jpg) no-repeat center center;
+    background: url(../img/Mapa.jpg) no-repeat center center;
     background-size: cover;
 }
 
